src/test/ui/parser/trait-object-trait-parens.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/trait-object-trait-parens.rs:8:31
   |
LL |     let _: Box<(for<'a> Trait<'a>) + (Copy) + (?Sized)>;
   |                               ^^ undeclared lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0261`.
